<resources>
    <string name="app_name">RoomSMS</string>
    <string name="userLabel">"User: "</string>
    <string name="sample_text">Sample Text</string>
    <string name="create_room">Create Room</string>
    <string name="owner">"Owner: "</string>
    <string name="members">"Members: "</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dialog_leave_room_title">Leave Room</string>
    <string name="dialog_leave_room_message">If you leave this room, you will have to be invited again to access it. Are you sure you want to leave the room?</string>
    <string name="dialog_delete_room_title">Delete Room</string>
    <string name="dialog_delete_room_message">If you delete the room, you and every other members will lose access to all the messages sent. This action is irreversible. Are you sure you want to delete the room?</string>
    <string name="dialog_add_user_title">Add User</string>
    <string name="dialog_add_user_message">Email:</string>
    <string name="dialog_add_room_title">Add Room</string>
    <string name="dialog_add_room_message">Room Name:</string>
    <string name="dialog_change_room_name_title">Change Room Name</string>
    <string name="dialog_change_room_name_message">New Name:</string>
    <string name="dialog_kick_title">Kick</string>
    <string name="dialog_kick_message">The user can be reinvited. Are you sure you want to kick </string>
    <string name="dialog_change_role_title">Change Role</string>
    <string name="dialog_change_role_message">An admin can kick and change roles to every other member. Are you sure you want to change the role of this user:  </string>
    <string name="change">Change</string>
    <string name="add">Add</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="retype_password">Retype Password</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
</resources>