<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/carbon"
    android:padding="28dp">

    <EditText
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginBottom="10dp">
    </EditText>

    <EditText
        android:id="@+id/Username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/username">
    </EditText>

    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/password">
    </EditText>

    <EditText
        android:id="@+id/RePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:hint="@string/retype_password">
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="20">

        <Button
            android:id="@+id/RegisterButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/register"
            android:layout_weight="7">

        </Button>
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3">

        </Space>
        <Button
            android:id="@+id/BackButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/back"
            android:layout_weight="6">

        </Button>

    </LinearLayout>

</LinearLayout>