<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@color/carbon"
    android:paddingTop="28dp"
    android:paddingBottom="28dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="28dp"
        android:paddingEnd="28dp"
        android:layout_marginBottom="20dp">
        <TextView

            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="22sp"
            android:text="@string/userLabel" />
        <TextView
            android:id="@+id/UserLabel"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="22sp"
            android:text="@string/sample_text"/>

    </LinearLayout>


    <ListView
        android:id="@+id/RoomsList"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3">

        </Space>
        <Button
            android:id="@+id/CreateRoomButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:text="@string/create_room">

        </Button>
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3">

        </Space>

    </LinearLayout>

</LinearLayout>