<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:background="@color/carbon"
    android:orientation="vertical">

    <TextView
        android:id="@+id/DialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_text"
        android:textSize="23sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="10dp"
        />

    <TextView
        android:id="@+id/DialogMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="20dp"
        android:text="This is a longer text. The reason for this prolonged paragraph is to see how the text behaves on multiple lines."/>

    <LinearLayout
        android:weightSum="20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="20dp">

        <Space
            android:layout_weight="6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/NoButton"
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/no"/>

        <Space
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/YesButton"
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/yes"/>
        <Space
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>


    </LinearLayout>

</LinearLayout>